Projects/Firewall-Rules-Simulation/dns_server_rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sat May 10 18:17:13 2025
*filter
:INPUT DROP [1214:346397]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [80:13525]
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.86.0/24 -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 192.168.86.0/24 -p tcp -m tcp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Sat May 10 18:17:13 2025
