Projects/Firewall-Rules-Simulation/email_server.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sat May 10 18:30:32 2025
*filter
:INPUT DROP [1624:467887]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [727:165715]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Sat May 10 18:30:32 2025
