Projects/Firewall-Rules-Simulation/web_server_rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sat May 10 18:01:18 2025
*filter
:INPUT DROP [690:204706]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [56:11558]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Sat May 10 18:01:18 2025
